--- a/myProject/frontend/package.json
+++ b/myProject/frontend/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "@wailsapp/runtime": "^1.0.0",
+    "babel-polyfill": "^6.26.0",
     "core-js": "^2.6.4",
     "material-design-icons-iconfont": "^5.0.1",
     "node-sass": "^4.13.0",
+    "toastr": "^2.1.4",
     "vue": "^2.5.22",
     "vue-i18n": "^8.15.1",
     "vue-router": "^3.1.3",
+    "vue-toastr-2": "0.0.10",
     "vuetify": "^2.1.12",
     "vuex": "^3.1.2"
   },
@@ -24,9 +27,13 @@
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
     "babel-eslint": "^10.0.1",
+    "deepmerge": "^4.2.2",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "eventsource-polyfill": "^0.9.6",
+    "fibers": "^4.0.2",
+    "sass": "^1.23.7",
+    "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.5.21",
     "webpack-hot-middleware": "^2.24.3"
   },
